--- a/view/public/layout.css
+++ b/view/public/layout.css
@@ -54,10 +54,12 @@
 	min-height: 500px;
 }
 
-#content {
+#content_container #content {
 	width: 960px;
 	margin: 0px auto;
-	margin-top: 0px;
+	margin-top: 40px;
+	text-align: left;
+	margin-bottom: 30px;
 }
 
 #footer_container {
