--- a/view/public/layout.css
+++ b/view/public/layout.css
@@ -162,7 +162,7 @@
 
 }
 
-@media only screen and (min-width: 480px) and (max-width: 767px){
+@media only screen and (min-width: 480px) and (max-width: 767px) {
 
 
 	#header, #content_container #content, #header #navigation, #header #navigation ul, #footer_container, #footer, #footer #navigation {
@@ -199,7 +199,7 @@
 
 } 
 
-@media only screen and (min-width: 769px) and (max-width: 991px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
 	#header, #content_container #content {
 		width: 753px;
 	}
@@ -232,6 +232,9 @@
 
 #header_container {
 	width: 100%;
+	position: relative;
+	z-index: 1;
+	background-color: #ffffff;
 	
 }
 
@@ -245,7 +248,6 @@
 }
 
 #header {
-
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 10px;
@@ -264,6 +266,9 @@
 #content_container {
 	width: 100%;
 	min-height: 500px;
+	position: relative;
+	z-index: 1;
+	background-color: #ffffff;
 }
 
 #content_container #content {
