--- a/view/public/layout_1200.css
+++ b/view/public/layout_1200.css
@@ -34,10 +34,12 @@ body {
 #header_top_border {
 	width: 100%;
     height: 60px;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 35%);
+   /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 35%);*/
     z-index: 50;
-    position: absolute;
+	position: absolute;
+	background: url('../asset/images/header.png');
+	background-size: cover;
 }
 
 
@@ -104,6 +106,11 @@ body {
 
 .page_location {
 	font-size: 14px;
+}
+
+.page_location a, .page_location a:visited {
+	text-decoration: none;
+	color: #6e6363;
 }
 
 
@@ -358,7 +365,7 @@ h3 {
 	margin: 0px auto;
 	margin-top: 20px;
 	position: relative;
-	border: 1px solid #3c484d;
+	border: 1px solid #6b767b;
 	cursor: pointer;
 	margin-bottom: 10px;
 	padding: 20px;
@@ -448,6 +455,7 @@ h3 {
 	text-align: center;
 	/*border: 3px solid #6e6363;*/
 	box-shadow: 3px 3px #d8d4d4;
+	text-shadow: 2px 2px 4px #000000;
 }
 
 .vehicle_price h1 {
@@ -466,14 +474,15 @@ h3 {
 	width: 95%;
 	padding: 20px;
 	/*border: 1px solid #c0c0c0;*/
-	/*background-color: #EAEAEA;*/
-	background-color: #ffffff;
+	background-color: #EAEAEA;
+	/*background-color: #ffffff;*/
 	height: 100%;
 	margin: 0px auto;
 	margin-top: 30px; 
 	position: relative;
 	border: 1px solid #3c484d2e;
 	margin-bottom: 10px;
+	border-radius: 3px;
 }
 
 .vehicle_container_full .vehicle_description {
@@ -570,8 +579,9 @@ h3 {
 	border: 1px solid #3c484d;
 	width: 100%;
 	padding-bottom: 20px;
-	border-radius: 4px;
+	border-radius: 3px;
 	padding-top: 20px;
+	background-color: #ffffff;
 }
 
 #vehicleSummary .detailContainer {
@@ -670,9 +680,9 @@ h3 {
 #enquiryContainer {
 	float: left;
 	text-align: center;
-	width: 270px;
 	margin: 0px auto;
 	margin-top: 20px;
+	background-color: #ffffff;
 }
 
 #vehicleEnquiryForm {
