Changes to viewRegistration.php CSS

--- a/view/public/layout_1200.css
+++ b/view/public/layout_1200.css
@@ -497,7 +497,7 @@ h3 {
 .vehicle_container_full .vehicle_description {
 	margin-bottom: 10px;
 	float: left;
-	width: 100%;
+	width: 800px;
 }
 
 .vehicle_container_full .vehicle_image {
@@ -507,6 +507,7 @@ h3 {
 	position: relative;
 	margin: 0px auto;
 	float: left;
+	margin-top: 22px;
 
 }
 
@@ -594,7 +595,18 @@ h3 {
 }
 
 #vehicleSummary .detailContainer {
-	width: 33%;
+	width: 100%;
+	text-align: left;
+}
+
+#vehicleSummary .detailContainer .detailContainerLabel {
+	width: 80%;
+	text-align: left;
+}
+
+#vehicleSummary .detailContainer .detailContainerValue {
+	width: 20%;
+	text-align: left;
 }
 
 #vehicleRunningCosts .detailContainer {
@@ -637,7 +649,7 @@ h3 {
 	padding-right: 0%;
 }
 
-#vehicleSummary .vehicleDetails .detailContainer:nth-last-child(-n+3) {
+#vehicleSummary .vehicleDetails .detailContainer:nth-last-child(-n+1) {
 	border-bottom: 0px solid #c0c0c0;
 }
 
